--- a/mondrian.html
+++ b/mondrian.html
@@ -13,27 +13,27 @@
 <h1>Mondrian Art in CSS Grid</h1>
 
 <div class="wrapper">
-<!--
 
     <div class="canvas tableu1">
         <p>Tableau I, 1921</p>
         <ul>
-            <li class="red">1</li>
-            <li class="white">2</li>
-            <li class="lightgray">3</li>
-            <li class="black">4</li>
-            <li class="lightgray"></li>
-            <li class="lightgray"></li>
-            <li class="lightgray"></li>
+            <li class="red"></li>
+            <li class="lightgray2"></li>
+            <li class="black"></li>
+            <li class="lightgray1"></li>
+
+            <li class="lightgray1"></li>
+            <li class="lightgray1"></li>
+
+            <li class="lightgray2"></li>
             <li class="blue"></li>
-            <li class="lightgray"></li>
-            <li class="white"></li>
+            <li class="lightgray1"></li>
             <li class="yellow"></li>
-            <li class="lightgray"></li>
+            <li class="lightgray2"></li>
+            <li class="lightgray2"></li>
             <li class="black"></li>
         </ul>
     </div>
--->
 
     <div class="canvas comp2">
         <p>Composition II in Red, Blue, and Yellow, 1930</p>
