--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mondrian Art in CSS Grid</title>
+    <title>Art in CSS Grid</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <link rel="stylesheet" href="css/mondrian.css">
 
 </head>
 
 <body>
-<h1>Mondrian Art in CSS Grid</h1>
+    <h1>Artworks in CSS Grid &#8594;</h1>
 
 <div class="wrapper">
-
+    
     <div class="canvas tableu1">
-        <p>Tableau I, 1921</p>
+        <p>Tableau I (Mondrian, 1921)</p>
         <ul>
             <li class="red"></li>
             <li class="lightgray2"></li>
@@ -26,9 +26,9 @@
             <li class="lightgray1"></li>
 
             <li class="lightgray2"></li>
-            <li class="indigo"></li>
+            <li class="darkblue"></li>
             <li class="lightgray1"></li>
-            <li class="yellow"></li>
+            <li class="yellow2"></li>
             <li class="lightgray2"></li>
             <li class="lightgray2"></li>
             <li class="black"></li>
@@ -39,7 +39,7 @@
     </div>
 
     <div class="canvas comp2">
-        <p>Composition II in Red, Blue, and Yellow, 1930</p>
+        <p>Composition II in Red, Blue, and Yellow (Mondrian, 1930)</p>
         <ul>
             <li class="white"></li>
             <li class="red"></li>
@@ -53,20 +53,23 @@
     <div class="painting">
         <img src="images/img_comp2.jpg" alt="">
     </div>
-<!--
-    
-    <div class="canvas comp10">
-        <p>Composition No. 10 (1939–42)</p>
+
+    <div class="canvas rothko-no3">
+        <p>No. 3/No. 13 - Magenta, Black, Green on Orange (Rothko, 1949)</p>
         <ul>
-            <li class="lightblue"></li>
-            <li class="white"></li>
-            <li class="white"></li>
+            <li class="darkmagenta"></li>
+            <li class="lightyellow"></li>
+            <li class="black"></li>
+            <li class="lightyellow"></li>
+            <li class="black"></li>
+            <li class="mossgreen"></li>
+            <li class="darkorange"></li>
         </ul>
     </div>
     <div class="painting">
-        <img src="images/img_comp10.jpg" alt="">
+        <img src="images/img_rothko-no3no13-1949.jpg" alt="">
     </div>
--->
 </div>
+<!--renee talabucon 2018 -->
 </body>
 </html>
