Added Rothko No.61 Rust and Blue, 1953

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
     <div class="painting">
         <img src="images/img_rothko-no3no13-1949.jpg" alt="">
     </div>
+
+    <div class="canvas rothko-no61">
+        <p>No. 61 - Rust and Blue (Rothko, 1953)</p>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <div class="painting">
+        <img src="images/img_rothko-no61-1953.jpg" alt="">
+    </div>
 </div>
 <!--renee talabucon 2018 -->
 </body>
